--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -141,6 +141,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - AccountGo</p>
+            <p style="text-align: center;"><a href="https://github.com/codemvp/accountgo">Download Source Code</a></p>
         </footer>
     </div>
 
