--- a/Web/Views/Sales/Customers.cshtml
+++ b/Web/Views/Sales/Customers.cshtml
@@ -6,13 +6,11 @@
 
 <h2>Customers</h2>
 
-@Html.ActionLink("Add Customer", "AddCustomer", "Sales")
+@Html.ActionLink("Add Customer", "AddOrEditCustomer", "Sales")
 <table class="table">
     <thead>
         <tr>
             <th>Name</th>
-            <th>First Name</th>
-            <th>Last Name</th>
             <th>Balance</th>
         </tr>
     </thead>
@@ -20,9 +18,7 @@
         @foreach (var customer in Model.CustomerListLines)
         {
             <tr>
-                <td>@Html.ActionLink((string)string.Format("{0}", customer.Name), "Customer", new { id = customer.Id })</td>
-                <th>@customer.FirstName</th>
-                <th>@customer.LastName</th>
+                <td>@Html.ActionLink((string)string.Format("{0}", customer.Name), "AddOrEditCustomer", new { id = customer.Id })</td>
                 <td>@customer.Balance</td>
             </tr>
         }
