--- a/Web/Views/Sales/CustomerDetail.cshtml
+++ b/Web/Views/Sales/CustomerDetail.cshtml
@@ -15,7 +15,7 @@
             <label class="col-md-2 control-label">Balance</label>
             @Html.DisplayFor(m => m.Balance, new { @class = "form-control" })
         </div>
-        @Html.ActionLink("Edit", "EditCustomer", new { @id = Model.Id })
+        @Html.ActionLink("Edit", "AddOrEditCustomer", new { @id = Model.Id })
     </div>
 </div>
 <h3>Receipts</h3>
