--- a/Web/Views/Sales/SalesInvoices.cshtml
+++ b/Web/Views/Sales/SalesInvoices.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Sales Invoices</h2>
 
-@Html.ActionLink("Add Sale Invoice", "AddSalesInvoice", "Sales")
+@Html.ActionLink("Add Sale Invoice", "SalesInvoice", "Sales")
 
 <table class="table">
     <thead>
