--- a/Web/Views/Sales/AddOrEditCustomer.cshtml
+++ b/Web/Views/Sales/AddOrEditCustomer.cshtml
@@ -13,6 +13,9 @@
             <label class="col-md-3 control-label">Name</label>
             @Html.TextBoxFor(m => m.Name)
         </div>
+        <div>
+            @Html.ActionLink("Details", "CustomerDetail", new { id = Model.Id })
+        </div>
     </div>
     <h2>Invoicing</h2>
     <div class="panel panel-default panel-body">
