--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -109,7 +109,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink("Generate Invoices", "BulkInvoice", "Administration")</li>
+                                @*<li>@Html.ActionLink("Generate Invoices", "BulkInvoice", "Administration")</li>*@
                                 <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Setup</a>
                                     <ul class="dropdown-menu">
