routine dev - add primarycontact customer detail

--- a/Web/Views/Financial/AddJournalEntry.cshtml
+++ b/Web/Views/Financial/AddJournalEntry.cshtml
@@ -37,8 +37,8 @@
             <tbody>
                 <tr>
                     <td>@Html.DropDownListFor(m => m.AccountId, ModelViewHelper.Accounts(null))</td>
-                    <td>@Html.EnumDropDownListFor(m => m.DrCr)</td>
-                    <td>@Html.TextBoxFor(m => m.Amount)</td>
+                    <td>@Html.EnumDropDownListFor(m => m.DrCr, new { @style = "width: 70px;" })</td>
+                    <td>@Html.TextBoxFor(m => m.Amount, new { @style = "width: 100px;" })</td>
                     <td>@Html.TextBoxFor(m => m.Memo)</td>
                     <td>
                         <input type="submit" value="Add Item" name="AddJournalEntryLine" /></td>
