--- a/Web/Views/Sales/_SalesLineItems.cshtml
+++ b/Web/Views/Sales/_SalesLineItems.cshtml
@@ -155,7 +155,7 @@
                     <td></td>
                     <td></td>
                     <td>Shipping Charges</td>
-                    <td colspan="2">@Html.TextBoxFor(m => m.ShippingHandlingCharges)</td>
+                    <td colspan="2">@Html.TextBoxFor(m => m.ShippingHandlingCharges, new { @style = "width: 100px; text-align: right; " })</td>
                     @*<td></td>*@
                 </tr>
                 <tr>
