--- a/Web/Views/Purchasing/Vendors.cshtml
+++ b/Web/Views/Purchasing/Vendors.cshtml
@@ -18,7 +18,7 @@
         @foreach (var vendor in Model.VendorsList)
         {
             <tr>
-                <td>@Html.ActionLink((string)string.Format("{0}", vendor.Name), "AddOrEditVendor", new { id = vendor.Id })</td>
+                <td>@Html.ActionLink(string.Format("{0}", vendor.Name), "AddOrEditVendor", new { id = vendor.Id })</td>
                 <td>@vendor.Balance</td>
             </tr>
         }
