--- a/Web/Views/Sales/SalesInvoices.cshtml
+++ b/Web/Views/Sales/SalesInvoices.cshtml
@@ -26,14 +26,14 @@
                 <td>@invoice.Customer</td>
                 <td>@invoice.Date</td>
                 <td>@invoice.Amount</td>
-                @if (invoice.IsFullPaid)
+@*                @if (invoice.IsFullPaid)
                 {
                     <td>@Html.Raw("Paid")</td>
                 }
                 else
                 {
                     <th>@Html.ActionLink("Receipt", "AddSalesReceipt", new { salesInvoiceId = invoice.Id })</th>
-                }
+                }*@
             </tr>
         }
     </tbody>
