use web api to provide look-up data, i.e. accounts, customers, etc. ModelViewHelper calls the web api.

--- a/Source/Web/Views/Purchasing/PurchaseOrder.cshtml
+++ b/Source/Web/Views/Purchasing/PurchaseOrder.cshtml
@@ -13,8 +13,8 @@
     @Html.HiddenFor(m => m.DocumentType)
     <div>
         <div class="form-group">
-            <label class="col-md-2 control-label">Customer</label>
-            @Html.DropDownListFor(m => m.VendorId, ModelViewHelper.Vendors(null))
+            <label class="col-md-2 control-label">Vendor</label>
+            @Html.DropDownListFor(m => m.VendorId, ModelViewHelper.Vendors())
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Date</label>
