--- a/Source/Web/Views/Sales/SalesOrder.cshtml
+++ b/Source/Web/Views/Sales/SalesOrder.cshtml
@@ -14,7 +14,7 @@
     <div>
         <div class="form-group">
             <label class="col-md-2 control-label">Customer</label>
-            @Html.DropDownListFor(m => m.CustomerId, ModelViewHelper.Customers(null))
+            @Html.DropDownListFor(m => m.CustomerId, ModelViewHelper.Customers())
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Payment Term</label>
