--- a/Source/Web/Views/Inventory/AddItem.cshtml
+++ b/Source/Web/Views/Inventory/AddItem.cshtml
@@ -17,10 +17,10 @@
             <label class="col-md-2 control-label">Description</label>
             @Html.TextBoxFor(m => m.Description)
         </div>
-        <div class="form-group">
+        @*<div class="form-group">
             <label class="col-md-2 control-label">Item Type</label>
             @Html.DropDownListFor(m => m.ItemType, Model.ItemTypes)
-        </div>
+        </div>*@
         <div>
             <input type="submit" value="Save" name="SaveItem" />
         </div>
