--- a/Source/Web/Views/Inventory/EditItem.cshtml
+++ b/Source/Web/Views/Inventory/EditItem.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Web.Models.ViewModels.Items.EditItem
+@using Web.Models;
 @{
     ViewBag.Title = "EditItem";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -24,15 +25,15 @@
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Category</label>
-            @Html.DropDownListFor(m => m.ItemCategoryId, Model.ItemCategories)
+            @Html.DropDownListFor(m => m.ItemCategoryId, ModelViewHelper.ItemCategories())
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Item Tax Group</label>
-            @Html.DropDownListFor(m => m.ItemTaxGroupId, Model.ItemTaxGroups)
+            @Html.DropDownListFor(m => m.ItemTaxGroupId, ModelViewHelper.ItemTaxGroups())
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Smallest Unit of Measurement</label>
-            @Html.DropDownListFor(m => m.SmallestMeasurementId, Model.UnitOfMeasurements)
+            @Html.DropDownListFor(m => m.SmallestMeasurementId, ModelViewHelper.Measurements())
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Sell Price</label>
@@ -44,11 +45,11 @@
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Sell Account</label>
-            @Html.DropDownListFor(m => m.SellAccountId, Model.Accounts)
+            @Html.DropDownListFor(m => m.SellAccountId, ModelViewHelper.Accounts())
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Sell Unit of Measurement</label>
-            @Html.DropDownListFor(m => m.SellMeasurementId, Model.UnitOfMeasurements)
+            @Html.DropDownListFor(m => m.SellMeasurementId, ModelViewHelper.Measurements())
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Purchase Cost</label>
@@ -56,7 +57,7 @@
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Purchase Unit of Measurement</label>
-            @Html.DropDownListFor(m => m.PurchaseMeasurementId, Model.UnitOfMeasurements)
+            @Html.DropDownListFor(m => m.PurchaseMeasurementId, ModelViewHelper.Measurements())
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Purchase Description</label>
@@ -64,7 +65,7 @@
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Inventory Adjustment</label>
-            @Html.DropDownListFor(m => m.InventoryAdjustmentAccountId, Model.Accounts)
+            @Html.DropDownListFor(m => m.InventoryAdjustmentAccountId, ModelViewHelper.Accounts())
         </div>@*
 
             <div class="form-group">
@@ -73,11 +74,11 @@
             </div>*@
         <div class="form-group">
             <label class="col-md-3 control-label">Inventory Account</label>
-            @Html.DropDownListFor(m => m.InventoryAccountId, Model.Accounts)
+            @Html.DropDownListFor(m => m.InventoryAccountId, ModelViewHelper.Accounts())
         </div>
         <div class="form-group">
             <label class="col-md-3 control-label">Cost of Goods Sold</label>
-            @Html.DropDownListFor(m => m.CostOfGoodsSoldAccountId, Model.Accounts)
+            @Html.DropDownListFor(m => m.CostOfGoodsSoldAccountId, ModelViewHelper.Accounts())
         </div>
         @*<div class="form-group">
         <label class="col-md-3 control-label">Inventory</label>
