--- a/Source/Web/Views/Financial/GeneralLedgerSetting.cshtml
+++ b/Source/Web/Views/Financial/GeneralLedgerSetting.cshtml
@@ -16,23 +16,23 @@
         </div>
         <div>
             <label class="col-md-8 control-label">Payable Account</label>
-            @Html.DropDownListFor(m => m.PayableAccountId, ModelViewHelper.Accounts(null))
+            @Html.DropDownListFor(m => m.PayableAccountId, ModelViewHelper.Accounts())
         </div>
         <div>
             <label class="col-md-8 control-label">Purchase Discount Account</label>
-            @Html.DropDownListFor(m => m.PurchaseDiscountAccountId, ModelViewHelper.Accounts(null))
+            @Html.DropDownListFor(m => m.PurchaseDiscountAccountId, ModelViewHelper.Accounts())
         </div>
         <div>
             <label class="col-md-8 control-label">Goods Receipt Note Clearing Account</label>
-            @Html.DropDownListFor(m => m.GoodsReceiptNoteClearingAccountId, ModelViewHelper.Accounts(null))
+            @Html.DropDownListFor(m => m.GoodsReceiptNoteClearingAccountId, ModelViewHelper.Accounts())
         </div>
         <div>
             <label class="col-md-8 control-label">Sales Discount Account</label>
-            @Html.DropDownListFor(m => m.SalesDiscountAccountId, ModelViewHelper.Accounts(null))
+            @Html.DropDownListFor(m => m.SalesDiscountAccountId, ModelViewHelper.Accounts())
         </div>
         <div>
             <label class="col-md-8 control-label">Shipping Charge Account</label>
-            @Html.DropDownListFor(m => m.ShippingChargeAccountId, ModelViewHelper.Accounts(null))
+            @Html.DropDownListFor(m => m.ShippingChargeAccountId, ModelViewHelper.Accounts())
         </div>
     </div>
     <div>
