--- a/Source/Web/Views/Purchasing/PurchaseDelivery.cshtml
+++ b/Source/Web/Views/Purchasing/PurchaseDelivery.cshtml
@@ -14,7 +14,7 @@
     <div>
         <div class="form-group">
             <label class="col-md-2 control-label">Customer</label>
-            @Html.DropDownListFor(m => m.VendorId, ModelViewHelper.Vendors(null))
+            @Html.DropDownListFor(m => m.VendorId, ModelViewHelper.Vendors())
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Date</label>
