--- a/Source/Web/Views/Sales/AddReceipt.cshtml
+++ b/Source/Web/Views/Sales/AddReceipt.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label class="col-md-3 control-label">Customer</label>
-                @Html.DropDownListFor(m => m.CustomerId, ModelViewHelper.Customers(null))
+                @Html.DropDownListFor(m => m.CustomerId, ModelViewHelper.Customers())
             </div>
             <div class="form-group">
                 <label class="col-md-3 control-label">Date of Deposit/Payment</label>
