--- a/Source/Web/Views/Sales/SalesInvoice.cshtml
+++ b/Source/Web/Views/Sales/SalesInvoice.cshtml
@@ -13,7 +13,7 @@
     <div>
         <div class="form-group">
             <label class="col-md-2 control-label">Customer</label>
-            @Html.DropDownListFor(m => m.CustomerId, ModelViewHelper.Customers(null))
+            @Html.DropDownListFor(m => m.CustomerId, ModelViewHelper.Customers())
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Date</label>
