--- a/Source/Web/Views/Financial/JournalEntries.cshtml
+++ b/Source/Web/Views/Financial/JournalEntries.cshtml
@@ -11,6 +11,7 @@
 <table class="table">
     <thead>
         <tr>
+            <th>GL Transaction No</th>
             <th>Account Code</th>
             <th>Account Name</th>
             <th>DrCr</th>
@@ -21,6 +22,7 @@
         @foreach(var je in Model.JournalEntriesListLines)
         {
             <tr>
+                <td>@je.GeneralLedgerHeaderId</td>
                 <td>@je.AccountCode</td>
                 <td>@je.AccountName</td>
                 <td>@je.DrCr</td>
