--- a/Source/Web/Views/Financial/Accounts.cshtml
+++ b/Source/Web/Views/Financial/Accounts.cshtml
@@ -6,6 +6,7 @@
 
 <h2>Accounts</h2>
 @Html.ActionLink("View Pdf", "ViewAccountsPDF")
+@Html.ActionLink("Add Account", "AddAccount")
 <table class="table">
     <thead>
         <tr>
