add company initialization

--- a/Source/Web/Views/Financial/Accounts.cshtml
+++ b/Source/Web/Views/Financial/Accounts.cshtml
@@ -13,8 +13,8 @@
             <td>Account Code</td>
             <td>Account Name</td>
             <td>Balance</td>
-            <td>Debit Balance</td>
-            <td>Credit Balance</td>
+            <td>Debit</td>
+            <td>Credit</td>
         </tr>
     </thead>
     <tbody>
