fix tax computation on creating sales invoice

--- a/Source/Web/Views/Sales/_SalesLineItems.cshtml
+++ b/Source/Web/Views/Sales/_SalesLineItems.cshtml
@@ -126,6 +126,7 @@
                 {
                     @Html.HiddenFor(m => Model.SalesLine.SalesLineItems[i].Id)
                     @Html.HiddenFor(m => Model.SalesLine.SalesLineItems[i].ItemId)
+                    @Html.HiddenFor(m => Model.SalesLine.SalesLineItems[i].CustomerId)
                     @Html.HiddenFor(m => Model.SalesLine.SalesLineItems[i].ItemNo)
                     @Html.HiddenFor(m => Model.SalesLine.SalesLineItems[i].ItemDescription)
                     @Html.HiddenFor(m => Model.SalesLine.SalesLineItems[i].Measurement)
