--- a/Source/Web/Views/Purchasing/PurchaseInvoices.cshtml
+++ b/Source/Web/Views/Purchasing/PurchaseInvoices.cshtml
@@ -25,7 +25,7 @@
                 <td>@invoice.Date</td>
                 <td>@invoice.Vendor</td>
                 <td>@invoice.TotalAmount</td>
-                <td>@invoice.TotalTax</td>
+                <td>@invoice.TotalTax.ToString("#.##")</td>
                 <td>
                     @if (!invoice.IsPaid)
                     {
