--- a/Source/Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/Views/Shared/_Layout.cshtml
@@ -126,17 +126,17 @@
                                 <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Setup</a>
                                     <ul class="dropdown-menu">
-                                        <li>@Html.ActionLink("Company Setup", "Index", "Administration")</li>
+                                        <li>@Html.ActionLink("Company Setup", "Company", "Administration")</li>
                                         <li class="divider"></li>
                                         <li>@Html.ActionLink("Taxes", "Taxes", "Administration")</li>
-                                        <li>@Html.ActionLink("Tax Groups", "Index", "Administration")</li>
+                                        <li>@Html.ActionLink("Tax Groups", "TaxGroups", "Financial")</li>
                                         <li>@Html.ActionLink("Item Tax Groups", "ItemTaxGroups", "Administration")</li>
                                         <li class="divider"></li>
                                         <li>@Html.ActionLink("Banks", "Banks", "Financial")</li>
-                                        <li>@Html.ActionLink("Fiscal Years", "Index", "Administration")</li>
+                                        <li>@Html.ActionLink("Financial Years", "FinancialYears", "Administration")</li>
                                         <li>@Html.ActionLink("General Ledger Setup", "GeneralLedgerSetting", "Financial")</li>
                                         <li class="divider"></li>
-                                        <li>@Html.ActionLink("Payment Terms", "Index", "Administration")</li>
+                                        <li>@Html.ActionLink("Payment Terms", "PaymentTerms", "Administration")</li>
                                     </ul>
                                     @*<li>@Html.ActionLink("User Management", "Index", "Account")</li>
                                         <li>@Html.ActionLink("Roles Management", "RolesIndex", "Account")</li>*@
