--- a/src/WebAngular/Views/Shared/_Layout.cshtml
+++ b/src/WebAngular/Views/Shared/_Layout.cshtml
@@ -2,16 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
+    <base href="/" />
     <title>@ViewData["Title"] - AccountGo</title>
+    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
+    @*<div>
         @await Html.PartialAsync("_LoginPartial")
-    </div>
+    </div>*@
     <div>
         @RenderBody()
     </div>
+    
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Start AngularJS 2 scripts -->
     <script src="lib/angular2/es6-shim.js"></script>
