--- a/src/WebAngular/Views/Shared/_Layout.cshtml
+++ b/src/WebAngular/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-
+    <h2>_Layout.cshtml</h2>
     <div>
         @RenderBody()
     </div>
