setting up react/mobx/typescript usage on sales order form.

--- a/src/AccountGoWeb/Views/Sales/salesorders.cshtml
+++ b/src/AccountGoWeb/Views/Sales/salesorders.cshtml
@@ -1,3 +1,6 @@
-﻿<div id="salesorders"></div>
-
-<script src="~/scripts/sales/salesorders.chunk.js"></script>
+﻿<div>
+    <a href="~/Sales/AddSalesOrder">Add</a>
+</div>
+<div>
+    Sales Orders List Here
+</div>
