--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -240,7 +240,7 @@
                         <a href="#"><i class="fa fa-industry"></i> <span>Accounts Receivable</span> <i class="fa fa-angle-left pull-right"></i></a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="sales/quotations">Sales Quotations</a>
+                                <a href="quotations/quotations">Sales Quotations</a>
                                 <!--<a href="#">Sales Quotations</a>-->
                             </li>
                             <li>
